--- a/examples/index.html
+++ b/examples/index.html
@@ -6,7 +6,7 @@
   <script src="../libs/jquery-migrate-1.2.1.min.js"></script>
   <script src="../libs/three.min.js"></script>
   <link rel="stylesheet" href="css/styles.css">
-  <script src="../build/theta-viewer.js"></script>
+  <script src="../build/theta-viewer.min.js"></script>
   <title>Sample of THETA Viewer</title>
 </head>
 <body>
