サンプル画像をRICOH THETAで撮影したものに入れ替え

--- a/examples/index.html
+++ b/examples/index.html
@@ -15,8 +15,8 @@
 /*global jQuery */
 (function ($) {
     'use strict';
-    // #theta-viewerにパノラマ画像img/theta.jpgを表示
-    $("#theta-viewer").createThetaViewer('img/theta.jpg');
+    // #theta-viewerにパノラマ画像img/R0010035.JPGを表示
+    $("#theta-viewer").createThetaViewer('img/R0010035.JPG');
 }(jQuery));
   </script>
 </body>
