デモの追加

--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
 
   <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen"/>
   <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
-  <link rel="stylesheet" href="stylesheets/demo2.css"/>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
-  <script type="text/javascript" src="javascripts/three.min.js"></script>
-  <script type="text/javascript" src="javascripts/theta-viewer.min.js"></script>
-  <script type="text/javascript" src="javascripts/demo2.js"></script>
 
   <title>Theta Viewer</title>
   <meta name="description" content="RICOH THETA like equirectangular projection panorama HTML5 viewer">
@@ -58,21 +54,11 @@
 
 <p>Theta Viewerは、JavaScriptのHTML5 3Dグラフィックスライブラリ<a href="http://threejs.org/">three.js</a>を利用して表示を行なっています。現時点ではWebGLの動作するPCのブラウザで閲覧することができます。また、今後、iOSやAndroidでも動作するようにしたいと考えています。</p>
 
-<h3><a name="theta-viewer-demo1" class="anchor" href="#theta-viewer-demo1"><span class="octicon octicon-link"></span></a>Theta Viewerのデモ1</h3>
-
-<p>サイトにアップしたパノラマ画像を表示するデモ</p>
-<div id="demo1" style="width: 100%; height: 400px; margin-bottom: 40px;"></div>
-<script>
-(function ($) {
-    'use strict';
-    $("#demo1").createThetaViewer("images/demo1.jpg");
-}(jQuery));
-</script>
-
-<h3><a name="theta-viewer-demo2" class="anchor" href="#theta-viewer-demo2"><span class="octicon octicon-link"></span></a>Theta Viewerのデモ2</h3>
-
-<p>パノラマ画像を領域にドラッグ&amp;ドロップして表示するデモ</p>
-<div id="demo2" style="; margin-bottom: 40px;">パノラマ画像をここへドロップ</div>
+<h3><a name="theta-viewer-demo" class="anchor" href="#theta-viewer-demo"><span class="octicon octicon-link"></span></a>Theta Viewerのデモ</h3>
+<ul>
+<li><a href="demo1.html">サイトにアップしたパノラマ画像を表示するデモ</a></li>
+<li><a href="demo2.html">ドラッグ&amp;ドロップしたパノラマ画像を表示するデモ</a></li>
+</ul>
         </article>
       </div>
     </div>
