iOSやAndroidへの対応

--- a/examples/index.html
+++ b/examples/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ja" class="no-js">
 <head>
   <meta charset="UTF-8">
   <script src="../libs/jquery-1.10.2.min.js"></script>
-  <script src="../libs/jquery-migrate-1.2.1.min.js"></script>
+  <script src="../libs/modernizr-2.7.1-csstransforms3d-canvas-touch.js"></script>
+  <script src="../libs/megapix-image.js"></script>
   <script src="../libs/three.min.js"></script>
-  <link rel="stylesheet" href="css/styles.css">
+  <script src="../libs/Detector.js"></script>
+  <script src="../libs/CSS3DRenderer.js"></script>
   <script src="../build/theta-viewer.min.js"></script>
+  <link rel="stylesheet" href="css/styles.css">
   <title>Sample of THETA Viewer</title>
 </head>
 <body>
