v.0.3.0に対応したページに変更

--- a/demo2.html
+++ b/demo2.html
@@ -3,8 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="stylesheets/styles.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script src="javascripts/jquery-1.10.2.min.js"></script>
+  <script src="javascripts/modernizr-2.7.1-csstransforms3d-canvas-touch.js"></script>
+  <script src="javascripts/megapix-image.js"></script>
   <script src="javascripts/three.min.js"></script>
+  <script src="javascripts/Detector.js"></script>
+  <script src="javascripts/CSS3DRenderer.js"></script>
   <script src="javascripts/theta-viewer.min.js"></script>
   <title>Demo 2</title>
 </head>
